trunk/Archive2/4d/0cfeba70541e49/output
main.cpp:3:6: error: conflicting declaration 'auto x'
 auto x = 42;
      ^
main.cpp:1:12: note: previous declaration as 'int x'
 extern int x;
            ^
